# rust-c

./: Cargo.toml  README.md
src/: build.rs  lib.rs  mac.rs
test/: Cargo.toml  build.rs
test/src/: inner.rs  lib.rs
