[package]
name = "rust_c"
version = "0.1.1"
authors = ["Michael Layzell <michael@thelayzells.com>", "Raphael Cohn <raphael.cohn@stormmq.com>"]

description = "Write C code inline in your rust code (hacky fork of rust-cpp / cpp crate)"
repository = "https://github.com/lemonrock/rust-c"
readme = "README.md"
license = "MPL-2.0"
keywords = ["c", "ffi", "syntex"]

[features]
build = ["gcc", "syntex_syntax"]
macro = []

[dependencies]
gcc = { version = "0.3", optional = true }
syntex_syntax = { version = "0.42", optional = true }
