[package]
name = "rust_c"
version = "0.1.2"
authors = ["Michael Layzell <michael@thelayzells.com>", "Raphael Cohn <raphael.cohn@stormmq.com>"]

description = "Write C code inline in your rust code (hacky fork of rust-cpp / cpp crate)"
repository = "https://github.com/lemonrock/rust-c"
readme = "README.md"
license = "MPL-2.0"
keywords = ["c", "ffi", "syntex"]

[features]
build = ["cc", "syntex_syntax"]
macro = []

[dependencies]
cc = { version = "1.0", optional = true }
syntex_syntax = { version = "0.59.1", optional = true }
